--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
-    "next": "15.5.3",
+    "next": "^15.5.3",
     "postcss": "^8.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
